[gd_scene load_steps=11 format=3 uid="uid://c7tqe3ftc0kuq"]

[ext_resource type="Texture2D" uid="uid://brxe143ilryvp" path="res://recursos/Imagens/relogio.png" id="4"]
[ext_resource type="Script" path="res://Scripts/cenas_da_resposta/Tempo_esgotado.gd" id="5"]
[ext_resource type="FontFile" uid="uid://58peuvhwwdw0" path="res://recursos/Fontes/Ubuntu Bold (TFF)/Ubuntu-Bold.ttf" id="6"]

[sub_resource type="FontFile" id="6"]
fallbacks = Array[Font]([ExtResource("6")])
face_index = null
embolden = null
transform = null
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/75/0 = Vector2(0, 0)
cache/0/75/0/ascent = 0.0
cache/0/75/0/descent = 0.0
cache/0/75/0/underline_position = 0.0
cache/0/75/0/underline_thickness = 0.0
cache/0/75/0/scale = 1.0
cache/0/75/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/75/0/kerning_overrides/75/0 = Vector2(0, 0)

[sub_resource type="FontVariation" id="FontVariation_iy8qd"]
base_font = ExtResource("6")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kwney"]
bg_color = Color(0, 0.756863, 1, 1)
border_width_bottom = 30
border_color = Color(0.34902, 0.364706, 0.368627, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_85vk1"]
bg_color = Color(0.470588, 0.835294, 1, 1)
border_width_bottom = 10
border_color = Color(0.34902, 0.364706, 0.368627, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="FontVariation" id="FontVariation_k1pct"]
base_font = ExtResource("6")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_g387q"]
bg_color = Color(1, 0, 0, 1)
border_width_bottom = 30
border_color = Color(0.34902, 0.364706, 0.368627, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ra5un"]
bg_color = Color(1, 0.664335, 0.611911, 1)
border_width_bottom = 10
border_color = Color(0.34902, 0.364706, 0.368627, 1)
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[node name="tempo_esgotado" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("5")

[node name="Fundo" type="ColorRect" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.87451, 0.227451, 0.227451, 1)

[node name="Relogio" type="Sprite2D" parent="."]
position = Vector2(550, 377.143)
scale = Vector2(1.14013, 1.07953)
texture = ExtResource("4")

[node name="Texto" type="Label" parent="."]
layout_mode = 0
anchor_top = 0.453646
anchor_right = 1.0
anchor_bottom = 0.603647
theme_override_fonts/font = SubResource("6")
theme_override_font_sizes/font_size = 75
horizontal_alignment = 1
vertical_alignment = 1

[node name="Jogar_Novamente" type="Button" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -465.0
offset_top = 340.0
offset_right = 465.0
offset_bottom = 590.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = SubResource("FontVariation_iy8qd")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_kwney")
theme_override_styles/hover = SubResource("StyleBoxFlat_85vk1")
theme_override_styles/pressed = SubResource("StyleBoxFlat_85vk1")
theme_override_styles/focus = SubResource("StyleBoxFlat_85vk1")
text = "Jogar Novamente"
metadata/_edit_lock_ = true

[node name="Voltar" type="Button" parent="."]
layout_mode = 0
offset_left = 77.0
offset_top = 1600.0
offset_right = 1007.0
offset_bottom = 1850.0
theme_override_fonts/font = SubResource("FontVariation_k1pct")
theme_override_font_sizes/font_size = 80
theme_override_styles/normal = SubResource("StyleBoxFlat_g387q")
theme_override_styles/hover = SubResource("StyleBoxFlat_ra5un")
theme_override_styles/pressed = SubResource("StyleBoxFlat_ra5un")
theme_override_styles/focus = SubResource("StyleBoxFlat_ra5un")
text = "Voltar ao Menu"
metadata/_edit_lock_ = true

[node name="voltar_ao_menu" type="Timer" parent="Voltar"]
wait_time = 60.0
autostart = true

[connection signal="pressed" from="Jogar_Novamente" to="." method="_on_Jogar_Novamente_pressed"]
[connection signal="pressed" from="Voltar" to="." method="_on_voltar_pressed"]
[connection signal="timeout" from="Voltar/voltar_ao_menu" to="." method="_on_voltar_ao_menu_timeout"]
